-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/e72b529e-af37-4c00-b29e-141f3b57348c-S1139/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/be3323a0-df0a-4c35-b484-f485226ed68a/runs/d8f9ca3c-fb7e-46d5-91b1-72b9c8a7a17d/workspace/open/src/hotspot/share/opto/loopnode.hpp:663), pid=25960, tid=25992
# assert(ctrl->is_CFG()) failed: CFG
Current CompileTask:
C2: 5073 134 b compiler.valhalla.valuetypes.TestBasicFunctionality::test11 (48 bytes)
Stack: [0x00007f94107ab000,0x00007f94108ac000], sp=0x00007f94108a5fa0, free space=1003k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x174baff] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x15f
V [libjvm.so+0x174c8bf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb2946d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x1182892] PhaseIdealLoop::get_ctrl(Node*)+0x512
V [libjvm.so+0x11b9fc4] PhaseIdealLoop::clone_loop(IdealLoopTree*, Node_List&, int, Node*)+0x764
V [libjvm.so+0x11872b3] PhaseIdealLoop::insert_post_loop(IdealLoopTree*, Node_List&, CountedLoopNode*, CountedLoopEndNode*, Node*, Node*, CountedLoopNode*&)+0xc3
V [libjvm.so+0x11883a8] PhaseIdealLoop::insert_pre_post_loops(IdealLoopTree*, Node_List&, bool)+0x2e8
V [libjvm.so+0x11920d5] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x3b5
V [libjvm.so+0x1192243] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x133
V [libjvm.so+0x11b0718] PhaseIdealLoop::build_and_optimize(bool, bool)+0xfc8
V [libjvm.so+0xa8d03f] Compile::Optimize()+0x57f
V [libjvm.so+0xa8ef94] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1264
V [libjvm.so+0x892d32] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
V [libjvm.so+0xa9aaac] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3ac
V [libjvm.so+0xa9bb80] CompileBroker::compiler_thread_loop()+0x340
V [libjvm.so+0x16831de] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x13ce77a] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x7dc5] start_thread+0xc5
On debug builds:
compiler/valhalla/valuetypes/TestBasicFunctionality.java
compiler/valhalla/valuetypes/TestOnStackReplacement.java
# assert(ctrl->is_CFG()) failed: CFG
Current CompileTask:
C2: 5073 134 b compiler.valhalla.valuetypes.TestBasicFunctionality::test11 (48 bytes)
Stack: [0x00007f94107ab000,0x00007f94108ac000], sp=0x00007f94108a5fa0, free space=1003k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x174baff] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x15f
V [libjvm.so+0x174c8bf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb2946d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x1182892] PhaseIdealLoop::get_ctrl(Node*)+0x512
V [libjvm.so+0x11b9fc4] PhaseIdealLoop::clone_loop(IdealLoopTree*, Node_List&, int, Node*)+0x764
V [libjvm.so+0x11872b3] PhaseIdealLoop::insert_post_loop(IdealLoopTree*, Node_List&, CountedLoopNode*, CountedLoopEndNode*, Node*, Node*, CountedLoopNode*&)+0xc3
V [libjvm.so+0x11883a8] PhaseIdealLoop::insert_pre_post_loops(IdealLoopTree*, Node_List&, bool)+0x2e8
V [libjvm.so+0x11920d5] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x3b5
V [libjvm.so+0x1192243] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x133
V [libjvm.so+0x11b0718] PhaseIdealLoop::build_and_optimize(bool, bool)+0xfc8
V [libjvm.so+0xa8d03f] Compile::Optimize()+0x57f
V [libjvm.so+0xa8ef94] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1264
V [libjvm.so+0x892d32] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
V [libjvm.so+0xa9aaac] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3ac
V [libjvm.so+0xa9bb80] CompileBroker::compiler_thread_loop()+0x340
V [libjvm.so+0x16831de] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x13ce77a] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x7dc5] start_thread+0xc5
On debug builds:
compiler/valhalla/valuetypes/TestBasicFunctionality.java
compiler/valhalla/valuetypes/TestOnStackReplacement.java