8193070: [MVT] PhaseIdealLoop::get_ctrl() fails with "assert(ctrl->is_CFG())"

Reviewed-by: roland